tests/fail/function-reference-1.co
function main

	var f = function test (*B)	// must be the exact type

struct A
	function test
	end

struct B : A
